syntax = "proto3";
package cart;
option go_package = "github.com/Zhoangp/Payment-Service/pb";
import "pb/error.proto";
service CartService {
  rpc GetCart(GetCartRequest) returns(GetCartResponse);
  rpc ResetCart(ResetCartRequest) returns(ResetCartResponse);
}

message Course {
  string id = 1;
  string title = 2;
  string price = 6 ;
  float discount = 7 ;
  string currency = 8 ;
  string instructorId = 14;
}
message Cart {
  string id = 1;
  repeated Course courses = 2;
  string totalPrice = 3;
  string currency = 4;
}

message GetCartRequest {
  string id = 1;
}
message GetCartResponse {
  Cart cart = 1;
  string totalCourse = 2;

  pb.ErrorResponse error = 3;
}
message ResetCartRequest {
  string cartId = 1;
}
message ResetCartResponse {
  pb.ErrorResponse error = 1;
}
